avoid deprecated constructor